# fantasy-allsvenskan-optimiser

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  config.toml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: e3a2cf0b6051_initial_schema.py
fantasy_optimizer/: api_client.py  config.py  http.py
fantasy_optimizer/db/: database.py  models.py  upsert.py
fantasy_optimizer/models/: gameweek.py  player.py  team.py
notebooks/: player_xP.ipynb
scripts/: OLD_optimize_team.py  README.md  build_forecasts.py  build_forecasts2.py  build_forecasts_batched.py  build_player_pool.py  fetch_bootstrap.py  fetch_fixtures.py  fetch_player_histories.py  ingest.py  ingest_enhanced_stats.py  init_db.py  optimize_team.py  parse_enhanced_stats.py  simulate_forecasts.py  test_quest.py
scripts/data_fetching/: README.md  fetch_bootstrap.py  fetch_fixtures.py  fetch_player_histories.py
scripts/forecasting/: README.md  build_forecasts.py  build_forecasts2.py  build_forecasts_batched.py  build_player_pool.py
scripts/optimisation/: OLD_optimize_team.py  README.md  optimize_team.py  test_quest.py
tests/: conftest.py  test_config.py  test_forecasts.py  test_ingest_enhanced_stats.py  test_optimizer.py  test_parse_enhanced_stats.py
